[gd_scene load_steps=26 format=3 uid="uid://45fhrklnafnt"]

[ext_resource type="Script" uid="uid://bbg3av4d1a0l2" path="res://Game/Scripts/UI/MainMenu.gd" id="1_humqo"]
[ext_resource type="Texture2D" uid="uid://c6qalq6hcnn3l" path="res://Game/Sprites/UI/Logo/Logo2_size2.png" id="2_aoqxq"]
[ext_resource type="AudioStream" uid="uid://cheyqosgx8qe6" path="res://Game/Audio/Tones/ToneC.mp3" id="2_hydpq"]
[ext_resource type="PackedScene" uid="uid://dhksvttb8b00" path="res://Game/Scenes/UI/SimpleButton.tscn" id="2_rnaqo"]
[ext_resource type="AudioStream" uid="uid://dlqxutym2m8kv" path="res://Game/Audio/Tones/ToneCs.mp3" id="3_kr1u6"]
[ext_resource type="Texture2D" uid="uid://cwdirrcki3w22" path="res://Game/Sprites/UI/Icon_ArrowLeft.png" id="3_ptp06"]
[ext_resource type="AudioStream" uid="uid://csod1enx112m2" path="res://Game/Audio/Tones/ToneD.mp3" id="4_r5m8m"]
[ext_resource type="FontFile" uid="uid://dvodb7k6kojyk" path="res://Game/Font/FaunaOne-Regular.ttf" id="5_2juxp"]
[ext_resource type="Texture2D" uid="uid://bec0cqvshybrx" path="res://Game/Sprites/UI/Icon_ArrowRight.png" id="5_aoqxq"]
[ext_resource type="AudioStream" uid="uid://cqjmhpx7wqo05" path="res://Game/Audio/Tones/ToneDs.mp3" id="5_i8cmy"]
[ext_resource type="AudioStream" uid="uid://deicys3l8y7yw" path="res://Game/Audio/Tones/ToneE.mp3" id="6_rwlik"]
[ext_resource type="Texture2D" uid="uid://bp0mfukew62ts" path="res://Game/Sprites/UI/Icon_Easy.png" id="6_ycg1d"]
[ext_resource type="Texture2D" uid="uid://dr37pchgtq3ak" path="res://Game/Sprites/UI/Icon_Medium.png" id="7_aoqxq"]
[ext_resource type="AudioStream" uid="uid://btc17v1lid8pf" path="res://Game/Audio/Tones/ToneF.mp3" id="7_ik5ew"]
[ext_resource type="Texture2D" uid="uid://xijgqs61jfmp" path="res://Game/Sprites/UI/Icon_Hard.png" id="8_2juxp"]
[ext_resource type="AudioStream" uid="uid://dghddjhoc0u2e" path="res://Game/Audio/Tones/ToneFs.mp3" id="8_3bwky"]
[ext_resource type="AudioStream" uid="uid://bqlb03wtueooj" path="res://Game/Audio/Tones/ToneG.mp3" id="9_yq8wj"]
[ext_resource type="AudioStream" uid="uid://cl5f4yq47q0l2" path="res://Game/Audio/Tones/ToneGs.mp3" id="10_0idqh"]
[ext_resource type="AudioStream" uid="uid://bxiuowpusr5cc" path="res://Game/Audio/Tones/ToneA.mp3" id="11_plle1"]
[ext_resource type="AudioStream" uid="uid://dnhgtoijr21tl" path="res://Game/Audio/Tones/ToneAs.mp3" id="12_hhmxs"]
[ext_resource type="AudioStream" uid="uid://cexhi86dnbiph" path="res://Game/Audio/Tones/ToneB.mp3" id="13_2vskq"]
[ext_resource type="AudioStream" uid="uid://dtms2hcgov0bn" path="res://Game/Audio/Melodies/OpeningMelody.mp3" id="14_hydpq"]
[ext_resource type="PackedScene" uid="uid://b7o43esvmuxd6" path="res://Game/Scenes/UI/FeedbackButton.tscn" id="23_vxag4"]
[ext_resource type="PackedScene" uid="uid://ccpigel55v1pm" path="res://Game/Scenes/UI/PianoHint.tscn" id="24_divdf"]
[ext_resource type="Script" uid="uid://53moi3obviwh" path="res://Game/Scripts/ScalesManager.gd" id="25_hydpq"]

[node name="MenuLayout" type="Control" node_paths=PackedStringArray("lbl_key", "lbl_type", "level_buttons_holder", "piano_hint", "scale_manager", "audio_player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_humqo")
lbl_key = NodePath("MarginContainer/VBoxContainer/KeySelection/Lbl_Key")
lbl_type = NodePath("MarginContainer/VBoxContainer/TypeSelection/Lbl_Type")
level_buttons_holder = NodePath("MarginContainer/VBoxContainer/DifficultySelection")
piano_hint = NodePath("PianoHint")
scale_manager = NodePath("ScalesManager")
audio_player = NodePath("AudioStreamPlayer")
tones_sounds = Array[AudioStream]([ExtResource("2_hydpq"), ExtResource("3_kr1u6"), ExtResource("4_r5m8m"), ExtResource("5_i8cmy"), ExtResource("6_rwlik"), ExtResource("7_ik5ew"), ExtResource("8_3bwky"), ExtResource("9_yq8wj"), ExtResource("10_0idqh"), ExtResource("11_plle1"), ExtResource("12_hhmxs"), ExtResource("13_2vskq")])

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_hydpq")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 100.0
offset_top = 40.0
offset_right = 367.0
offset_bottom = 156.0
texture = ExtResource("2_aoqxq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -136.0
offset_right = 230.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="KeySelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Btn_Left" parent="MarginContainer/VBoxContainer/KeySelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("3_ptp06")

[node name="Lbl_Key" type="Label" parent="MarginContainer/VBoxContainer/KeySelection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("5_2juxp")
theme_override_font_sizes/font_size = 40
text = "C#"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn_Right" parent="MarginContainer/VBoxContainer/KeySelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("5_aoqxq")

[node name="TypeSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Btn_Left" parent="MarginContainer/VBoxContainer/TypeSelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("3_ptp06")

[node name="Lbl_Type" type="Label" parent="MarginContainer/VBoxContainer/TypeSelection"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("5_2juxp")
theme_override_font_sizes/font_size = 22
text = "Minor - natural"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn_Right" parent="MarginContainer/VBoxContainer/TypeSelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("5_aoqxq")

[node name="Lbl_LevelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("5_2juxp")
theme_override_font_sizes/font_size = 24
text = "Difficulty:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultySelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Btn_Easy" parent="MarginContainer/VBoxContainer/DifficultySelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("6_ycg1d")

[node name="Btn_Medium" parent="MarginContainer/VBoxContainer/DifficultySelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("7_aoqxq")

[node name="Btn_Hard" parent="MarginContainer/VBoxContainer/DifficultySelection" instance=ExtResource("2_rnaqo")]
layout_mode = 2
size_flags_horizontal = 3
icon_texture = ExtResource("8_2juxp")

[node name="SimpleButton" parent="." instance=ExtResource("23_vxag4")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -355.0
offset_top = 48.0
offset_right = -58.0
offset_bottom = 128.0
grow_horizontal = 0

[node name="ScalesManager" type="Node" parent="."]
script = ExtResource("25_hydpq")

[node name="PianoHint" parent="." instance=ExtResource("24_divdf")]
z_index = 1
layout_mode = 1
offset_top = -243.0
offset_bottom = -5.0

[connection signal="button_down" from="MarginContainer/VBoxContainer/KeySelection/Btn_Left" to="." method="_on_btn_key_left_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/KeySelection/Btn_Right" to="." method="_on_btn_key_right_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/TypeSelection/Btn_Left" to="." method="_on_btn_type_left_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/TypeSelection/Btn_Right" to="." method="_on_btn_type_right_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/DifficultySelection/Btn_Easy" to="." method="_on_btn_easy_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/DifficultySelection/Btn_Medium" to="." method="_on_btn_medium_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/DifficultySelection/Btn_Hard" to="." method="_on_btn_hard_button_down"]
[connection signal="button_down" from="SimpleButton" to="." method="_on_feedback_button_button_down"]
